fix(ui): Add word-wrap to long span warnings

--- a/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/TextList.css
+++ b/packages/jaeger-ui/src/components/TracePage/TraceTimelineViewer/SpanDetail/TextList.css
@@ -22,4 +22,7 @@ SPDX-License-Identifier: Apache-2.0
 .TextList--List > li {
   padding: 0.25rem 0.5rem;
   vertical-align: top;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  white-space: pre-wrap;
 }
